Add spring-javaformat-maven-plugin